<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/here">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
...
            android:textSize="20sp"
            android:textColor="#000"
            android:layout_margin="10dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id = "@+id/et_NEWACTIVITY_actvitiyName"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:background="#ffffff"
...
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Pick a Time"
            android:onClick="showTimePickerDialog"
            android:visibility="visible"
            android:id="@+id/timePickah" />

        <EditText
            android:id = "@+id/et_NEWACTIVITY_actvitiyTime"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_marginBottom="10dp"
...
            android:textSize="20sp"
            android:textColor="#000"
            android:layout_margin="10dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id = "@+id/et_NEWACTIVITY_actvitiyLoc"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:background="#ffffff"
...
                android:layout_gravity="center"
                android:layout_marginTop="8dp" />

        </LinearLayout>

        <EditText
            android:id = "@+id/et_NEWACTIVITY_tags"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:inputType="text"
...
            android:textSize="20sp"
            android:textColor="#000"
            android:layout_margin="10dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id = "@+id/et_NEWACTIVITY_capacity"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:inputType="number"
...
            android:textSize="20sp"
            android:textColor="#000"
            android:layout_margin="10dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id = "@+id/et_NEWACTIVITY_desc"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_marginBottom="10dp"
            android:padding="2dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
...
