<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:background="#E0EEEE"
    android:id="@+id/isItThis">

    <TextView
        android:id="@+id/event_date"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:padding="3dp"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:background="@drawable/event_row_border"
        android:text="@string/eventRow_Date"
        android:layout_alignBottom="@+id/event_title" />

    <TextView
        android:id="@+id/event_title"
        android:layout_width="1dp"
        android:layout_height="60dp"
        android:padding="3dp"
        android:layout_toEndOf="@+id/event_date"
        android:layout_toLeftOf="@+id/replyButton"
        android:background="@drawable/event_row_border"
        android:text="Hotdog eating context" />

    <Button
        android:id="@+id/replyButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textSize="30sp"
        android:textColor="#4f4f4f"
        android:layout_alignTop="@+id/event_date"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="9dp"
        android:text="@string/event_row_reply"
        android:background="#65ee83"/>
</RelativeLayout>